--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ map.fitBounds(bounds);
 // Code from here https://github.com/Leaflet/Leaflet.heat/blob/gh-pages/demo/index.html
 addressPoints = addressPoints.map(function (p) { return [p[0], p[1]]; });
 var heat = L.heatLayer(addressPoints).addTo(map);
+
+var layer = L.mapbox.tileLayer('mapbox.streets');
+layer.addTo(map);
+
 </script>
 </body>
 </html>
