--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <!-- <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script> -->
 <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
 <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-heat/v0.1.3/leaflet-heat.js"></script>
-<script src="http://zia-.github.io/firemap_data/realworld_10000.js"></script>
+<!-- <script src="http://zia-.github.io/firemap_data/realworld_10000.js"></script> -->
+<script src="http://zia-.github.io/firemap_data/SEVIRI_data.js"></script>
 <script>
 // Fix mapbox token
 L.mapbox.accessToken = 'pk.eyJ1IjoiemlhLW0iLCJhIjoiQjM5aVpfTSJ9.s_U7YxQCK-Zq5SaJemH5bA';
@@ -41,9 +42,10 @@ var map = L.mapbox.map('map', 'mapbox.dark', {
 map.fitBounds(bounds);
 
 // Code from here https://github.com/Leaflet/Leaflet.heat/blob/gh-pages/demo/index.html
-addressPoints = addressPoints.map(function (p) { return [p[0], p[1]]; });
-var heat = L.heatLayer(addressPoints).addTo(map);
+firedata = firedata.map(function (p) { return [p[2], p[3]]; });
+var heat = L.heatLayer(firedata).addTo(map);
 
+// Other mapbox layers https://www.mapbox.com/api-documentation/#maps
 var layer = L.mapbox.tileLayer('mapbox.streets');
 layer.addTo(map);
 
