--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@ L.mapbox.accessToken = 'pk.eyJ1IjoiemlhLW0iLCJhIjoiQjM5aVpfTSJ9.s_U7YxQCK-Zq5SaJ
 // 40.903699, 28.697378  41.177273, 29.276363 Istanbul bounds which was used to download osm data
 // Construct a bounding box for this map that the user cannot move out of
 var minlatbound = 35.570652, minlonbound = 24.884267, maxlatbound = 42.425880, maxlonbound = 45.252919;
+// var minlatbound = -6.983754, minlonbound = 38.982368, maxlatbound = -6.574648, maxlonbound = 39.500786;
 var southWestbound = L.latLng(minlatbound, minlonbound),
     northEastbound = L.latLng(maxlatbound, maxlonbound),
     bounds = L.latLngBounds(southWestbound, northEastbound);
 
 // Initialize the map
-var map = L.mapbox.map('map', 'mapbox.satellite', {
+var map = L.mapbox.map('map', null, {
           maxBounds: bounds,
           maxZoom: 19,
           minZoom: 1
@@ -72,6 +73,72 @@ map.fitBounds(bounds);
 // L.marker([36, 32], {icon: cssIcon}).addTo(map);
 
 // console.log(firedata.length);
+
+
+// pointToLayer: function(feature, latlng) {
+//         return L.circleMarker(latlng, {
+//             radius: (feature.properties.population)/200000
+//         })
+//     },
+//     style: function (feature) {
+//     return {color: color_rgb_gen_redgreen( 78550, 14657434, feature.properties.population)};
+//     	},
+//     	onEachFeature: function (feature, layer) {
+//     layer.bindPopup(feature.properties.population);
+//     	}
+
+
+// var myIcon = L.icon({
+//     iconUrl: 'https://cdn2.iconfinder.com/data/icons/auto-cars/154/auto-car-beetle-small-128.png',
+//     // iconRetinaUrl: 'my-icon@2x.png',
+//     iconSize: [38, 95],
+//     iconAnchor: [22, 94],
+//     popupAnchor: [-3, -76],
+//     // shadowUrl: 'my-icon-shadow.png',
+//     // shadowRetinaUrl: 'my-icon-shadow@2x.png',
+//     shadowSize: [68, 95],
+//     shadowAnchor: [22, 94]
+// });
+//
+//
+//
+// var realurl = "https://raw.githubusercontent.com/Zia-/Ally-gis-code-challenge-Solution/master/data/activity_points.geojson";
+// var featureLayer = L.mapbox.featureLayer(realurl, {
+//     // pointToLayer: L.mapbox.marker.style,
+//     pointToLayer: function(feature, latlng) {
+//         return L.marker(latlng, {
+//             // radius: (feature.properties.previous_dominating_activity_confidence)/10
+//             // radius: 20
+//             icon: myIcon
+//         })
+//     },
+//     style: function (feature) {
+//       return {color: 'red'};
+//     },
+//     // onEachFeature: function (feature, layer) {
+//     //   layer.bindPopup('aaa');
+//   	// }
+// })
+//     // .loadURL('')
+//     // Once this layer loads, we set a timer to load it again in a few seconds.
+//     .on('ready', run)
+//     .bindPopup('Hello world!')
+//     // .setStyle()
+//     .addTo(map);
+//
+// function run() {
+//     // featureLayer.eachLayer(function(l) {
+//     //     map.panTo(l.getLatLng());
+//     // });
+//     window.setTimeout(function() {
+//         featureLayer.loadURL(realurl);
+//     }, 2000);
+// }
+
+
+
+
+
 
 for (i=0; i<firedata.length; ++i){
   // console.log(firedata[i][2]);
@@ -134,7 +201,7 @@ var layers = {
       HighContrast: L.mapbox.tileLayer('mapbox.high-contrast')
 };
 
-layers.Satellite.addTo(map);
+layers.Dark.addTo(map);
 L.control.layers(layers).addTo(map);
 </script>
 </body>
