--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Leaflet.heat demo</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <style>
         /*#map { width: 800px; height: 600px; }
         body { font: 16px/1.4 "Helvetica Neue", Arial, sans-serif; }
@@ -36,6 +37,8 @@
 <!-- <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script> -->
 <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
 <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-heat/v0.1.3/leaflet-heat.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="http://zia-.github.io/firemap_data/geo_2015.js"></script>
 <script>
 // Fix mapbox token
@@ -158,8 +161,61 @@ function run() {
       // console.log(layer.feature.properties.accuracy);
 
       var popup = new L.Popup({ autoPan: false });
-      popup.setContent('<div>' + layer.feature.properties.JDAY + '</div>' +
-          layer.feature.properties.F_CONF + ' people per square mile');
+      // popup.setContent('<div>' + layer.feature.properties.JDAY + '</div>' +
+      //     layer.feature.properties.F_CONF + ' people per square mile');
+
+      popup.setContent(
+        // '<div class="container">'+
+        '<div class="table-responsive">    '+
+      '<table class = "table">'+
+   '<caption>Contextual Table Layout</caption>'+
+   '<thead>'+
+      '<tr>'+
+         '<th>Product</th>'+
+         '<th>Payment Date</th>'+
+        ' <th>Status</th>'+
+      '</tr>'+
+   '</thead>'+
+   '<tbody>'+
+    '  <tr class = "active">'+
+      '   <td>Product1</td>'+
+        ' <td>23/11/2013</td>'+
+        ' <td>Pending</td>'+
+    '  </tr>'+
+    '  <tr class = "success">'+
+      '   <td>Product2</td>'+
+      '   <td>10/11/2013</td>'+
+      '   <td>Delivered</td>'+
+      '</tr>'+
+      '<tr class = "warning">'+
+      '   <td>Product3</td>'+
+      '   <td>20/10/2013</td>'+
+      '   <td>In Call to confirm</td>'+
+    '  </tr>'+
+    '  <tr class = "danger">'+
+    '     <td>Product4</td>'+
+      '   <td>20/10/2013</td>'+
+      '   <td>Declined</td>'+
+    '  </tr>'+
+   '</tbody>'+
+'</table>'+
+// '  </div>'+
+'</div>'
+)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       layer.bindPopup(popup);
       // var str = layer.feature.properties.accuracy
@@ -172,7 +228,7 @@ function run() {
     });
     window.setTimeout(function() {
         featureLayer.loadURL(realurl);
-    }, 5000);
+    }, 50000);
 }
 
 
