--- a/index.html
+++ b/index.html
@@ -28,13 +28,22 @@
             position: absolute;
             z-index: 1;
             top: 15px;
-            left: 70px;
+            left: 50px;
             /*margin: 20px auto;*/
             width: 12px;
             height: 12px;
             background-color: #55FF00;
             border-radius: 50%;
             box-shadow: #FFFFFF 0 -1px 7px 1px, inset #460 0 -1px 9px, #FFFFFF 0 2px 12px;
+        }
+        .danger {
+            position: absolute;
+            z-index: 1;
+            top: 15px;
+            left: 45%;
+            /*width: 12px;*/
+            height: 40px;
+            cursor:default;
         }
     </style>
 
@@ -59,7 +68,8 @@
 <div id="map">
   <!-- More info about siren http://cssdeck.com/labs/css-leds -->
   <div class="led-green"></div>
-  <div class="led-red"></div>
+  <button class="btn btn-disabled btn-danger danger" type="button">DANGER!</button>
+  <!-- <div class="led-red"></div> -->
 </div>
 
 <!-- <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script> -->
